refactor: query storage nodes in a random weighted order
